modify icons colors

--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -141,6 +141,7 @@
     width: 28px;
     margin: 0px 9px;
     cursor: pointer;
+    color: #fff;
 }
 .info__buttons .about-btn, .info__buttons .portfolio-btn{
     width: 301px;
