--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -338,6 +338,7 @@
     
     .scroll-container{
         width: 100%;
+        display: none;
     }
     .scroll-contianer__animate{
         margin: 0px auto;
